feat: add swagger documentation for get detail user
